# rust_devcontainer

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: .env  Cargo.toml  README.md
app/api/: Cargo.toml
app/api/src/: lib.rs
app/api/src/user/: delete.rs  find_discriminator.rs  mod.rs  register.rs  update.rs
app/app_service/: Cargo.toml
app/app_service/app_service/: Cargo.toml
app/app_service/app_service/src/: user.rs
app/app_service/app_service_impl/: Cargo.toml
app/app_service/app_service_impl/examples/: user_register.rs
app/app_service/app_service_impl/src/user/: register.rs
app/app_service/app_service_interface/: Cargo.toml
app/app_service/app_service_interface/src/: lib.rs  user.rs
app/app_service/examples/: user_register.rs
app/app_service/examples/user/: Cargo.toml
app/app_service/examples/user/src/: main.rs
app/app_service/src/: lib.rs
app/app_service/src/implementations/user/: mod.rs  register.rs
app/app_service/src/user/: mod.rs  user_application_service.rs
app/domain/: Cargo.toml
app/domain/examples/: create_user.rs
app/domain/src/: lib.rs
app/domain/src/entity/: user.rs
app/domain/src/object/: mod.rs  user_discriminator.rs  user_name.rs
app/domain/src/repository/: mod.rs  user.rs
app/infra/entity/: Cargo.toml
app/infra/entity/src/: lib.rs  user.rs
app/infra/entity/src/implementations/: prelude.rs  user.rs
app/infra/migration/src/: lib.rs  m20230827_114859_user.rs
app/infra/repository/: Cargo.toml
app/infra/repository/examples/: find_user1.rs
app/infra/repository/examples/sample/: Cargo.toml
app/infra/repository/examples/sample/examples/: find_user1.rs
app/infra/repository/examples/sample/src/: main.rs
app/infra/repository/src/: user.rs
app/src/: main.rs
app/src/common/: logger.rs  mod.rs
