[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = { version= "0.3.17", features = ["std", "env-filter", "time", "local-time"]}