[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_service_interface = { path = "../app_service/app_service_interface" }
axum = { version = "0.6.20", features = ["multipart"] }
tracing = { version = "0.1.37" }
serde = { version = "1.0", features = ["derive"] }