[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
url = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rusty_ulid = "2.0.0"
email_address = "0.2.4"
chrono = { version = "0.4.26", features = ["serde"] }
regex = "1.9.3"
once_cell = "1.18.0"