[package]
name = "app_service_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
domain = { path = "../../domain" }
async-trait = "0.1.73"
app_service_interface = { path = "../app_service_interface" }
