[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../../../domain" }
app_service = { path = "../../"}
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["macros"] }